French translation for 1238

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -628,6 +628,8 @@ FirstTimeWizardToadlet.memory.192M=192Mo - valeur raisonnable
 FirstTimeWizardToadlet.memory.256M=256Mo - si vous avez au moins 1Go de RAM
 FirstTimeWizardToadlet.memory.512M=512Mo - si vous avez beaucoup de RAM
 FirstTimeWizardToadlet.memory.64M=64Mo - si vous êtes désespéré
+FirstTimeWizardToadlet.networkThreatLevelConfirmTitle.HIGH=ATTENTION : vous devez ajouter manuellement des amis ou Freenet ne se connectera pas !
+FirstTimeWizardToadlet.networkThreatLevelConfirmTitle.MAXIMUM=ATTENTION : vous devez ajouter manuellement des amis ou Freenet ne se connectera pas !
 GIFFilter.invalidHeader=Ce fichier ne contient pas d'en-tête GIF valide.
 GIFFilter.invalidHeaderTitle=En-tête invalide
 GIFFilter.notGif=Ce fichier n'est pas un GIF. Il peut s'agir de n'importe quoi et votre navigateur risque de faire n'importe quoi avec. Nous l'avons donc bloqué.
@@ -1655,8 +1657,12 @@ TranslationToadlet.translationKeyLabel=Clé de traduction
 TranslationToadlet.translationUpdateTitle=Traduction
 TranslationToadlet.translationUpdatedTitle=Traduction mise à jour !
 TranslationToadlet.updateTranslationCommand=Enregistrer la traduction !
+UndetectableCharsetException.explanation=Les premiers octets d'une déclaration de jeu de caractères ont été détectés, mais ils sont invalides. La feuille de style est ignorée conformément à la section 4.4 de la norme CSS 2.1.
+UndetectableCharsetException.title=Impossible de détecter le jeu de caractères. Cela ressemble à ${charset} mais ce n'est pas ça.
 UnknownContentTypeException.explanation=Votre noeud Freenet ne connait pas ce type MIME. Cela signifie que votre navigateur risque de faire quelque chose de dangereux avec ce fichier. Par exemple, de nombreux formats peuvent contenir des images ou des vidéos embarquées, qui sont téléchargées depuis internet. Ce n'est vraiment pas sans danger car ils peuvent ruiner votre anonymat et révéler votre adresse IP (si l'attaquant possède le site ou a accès à ses logs). Les liens hypertexte vers le web peuvent aussi être une menace, pour la même raison, tout comme les scripts, pour ceci et d'autres raisons.
 UnknownContentTypeException.title=Type de contenu inconnu et potentiellement dangereux : ${type}
+UnsupportedCharsetInFilterException.explanation=C'est un jeu de caractères très rare, non supporté par Java, et il est probable que ce soit une tentative de contourner le filtre de contenu, ou que les données soient corrompues.
+UnsupportedCharsetInFilterException.title=Jeu de caractères non pris en charge : ${charset}.
 UpdateDeployContext.cannotUpdateNoExtJar=freenet-ext.jar est introuvable dans wrapper.conf (freenet.jar trouvé : ${mainFilename})
 UpdateDeployContext.cannotUpdateNoJars=Impossible de touver les .jar de Freenet dans le fichier wrapper.conf
 UpdateDeployContext.cannotUpdateNoMainJar=freenet.jar est introuvable dans wrapper.conf (freenet-ext.jar trouvé : ${extFilename})
