--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1374,7 +1374,7 @@ SecurityLevels.passwordWrongTitle=Wrong password entered
 SecurityLevels.enterPasswordTitle=Enter the master password to access cached content and queued downloads/uploads
 SecurityLevels.passwordWrong=You entered the wrong password. Please enter the correct password to enable access to the client-cache and improve browsing performance.
 SecurityLevels.enterPassword=Please enter the master password to enable access to downloads and uploads and to improve performance by enabling the recently browsed freesites cache.
-SecurityLevels.setPasswordLabel=Set the password:
+SecurityLevels.setPasswordLabel=Set the password
 SecurityLevels.setPassword=Please set the master password, which will be used to protect cached content. The stronger the password the stronger the protection: lots of letters and numbers and punctuation is best.
 SecurityLevels.setPasswordTitle=Set the password
 SecurityLevels.passwordNotZeroLength=The password must be at least one character long i.e. it must not be "".
