--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1622,7 +1622,9 @@ TranslationToadlet.remove=Remove
 TranslationToadlet.removeOverrideTitle=Remove a translation override key
 TranslationToadlet.removeOverrideWarningTitle=You are about to remove a translation override key!
 TranslationToadlet.returnToTranslations=Return to the translation page
+TranslationToadlet.selectTranslation=Select translation
 TranslationToadlet.showEverything=Show everything, including already translated strings
+TranslationToadlet.showTranslationOf=Show the translation of :
 TranslationToadlet.translationKeyLabel=Translation key
 TranslationToadlet.translationUpdateTitle=Translation update
 TranslationToadlet.translationUpdatedTitle=Translation updated!
