--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1123,6 +1123,8 @@ PproxyToadlet.noPlugins=No plugins loaded
 PproxyToadlet.noVersion=N/A
 PproxyToadlet.pluginNotFoundReload=The specified plugin could not be located in order to reload it.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin Not Found (reloading)
+PproxyToadlet.pluginNotFoundUpdatingTitle=Plugin Not Found (updating)
+PproxyToadlet.pluginNotFoundUpdating=The plugin you are trying to update isn't loaded!
 PproxyToadlet.pluginSourceChoice=You can either fetch the plugin over Freenet or from our central servers:
 PproxyToadlet.pluginSourceFreenet=Fetch over Freenet. This is untraceable, safe, and may be slow.
 PproxyToadlet.pluginSourceHTTPS=Fetch over the web from our central servers.
