--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1063,7 +1063,12 @@ PeersSayKeyBlownAlert.short=According to some of your peers it is not safe to au
 PluginConfig.configFile=Plugins configuration file
 PluginConfig.configFileLong=Path/Filename for the file which stores the plugin configuration
 PluginConfig.installDir=Plugins installation directory
-PluginConfig.installDirLong=Directory where to install the plugins 
+PluginConfig.installDirLong=Directory where to install the plugins
+PluginJarUpdater.pluginUpdatedShortText=A new version of the ${name} plugin is available!
+PluginJarUpdater.pluginUpdatedText=Click below to update to the latest version (${newVersion}) of ${name}.
+PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is available!
+PluginJarUpdater.updatePlugin=Update plugin!
+PluginJarUpdater.willAutoDeployOnRestart=The plugin will be automatically deployed on restarting the node.
 PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web?
 PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. This involves contacting a central server over the web (using HTTPS) so it is bad for security, but plugins may load more quickly.
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
@@ -1121,6 +1126,7 @@ PproxyToadlet.loadOtherPluginText=Here you can enter the URL of a plugin you wan
 PproxyToadlet.loadOtherURLLabel=Plugin URL
 PproxyToadlet.noPlugins=No plugins loaded
 PproxyToadlet.noVersion=N/A
+PproxyToadlet.pluginFilename=Name
 PproxyToadlet.pluginNotFoundReload=The specified plugin could not be located in order to reload it.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin Not Found (reloading)
 PproxyToadlet.pluginNotFoundUpdatingTitle=Plugin Not Found (updating)
