Revocation check after the user clicks the button, like with the node.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1069,6 +1069,7 @@ PluginJarUpdater.pluginUpdatedText=Click below to update to the latest version (
 PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is available!
 PluginJarUpdater.updatePlugin=Update plugin!
 PluginJarUpdater.willAutoDeployOnRestart=The plugin will be automatically deployed on restarting the node.
+PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update master key has not been compromised.
 PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web?
 PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. This involves contacting a central server over the web (using HTTPS) so it is bad for security, but plugins may load more quickly.
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
