--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1067,9 +1067,9 @@ PluginConfig.installDirLong=Directory where to install the plugins
 PluginJarUpdater.pluginUpdatedShortText=A new version of the ${name} plugin is available!
 PluginJarUpdater.pluginUpdatedText=Click below to update to the latest version (${newVersion}) of ${name}.
 PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is available!
-PluginJarUpdater.updatePlugin=Update plugin!
+PluginJarUpdater.updatePlugin=Update plugin after final security checks
 PluginJarUpdater.willAutoDeployOnRestart=The plugin will be automatically deployed on restarting the node.
-PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update master key has not been compromised.
+PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update system has not been compromised.
 PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web?
 PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. This involves contacting a central server over the web (using HTTPS) so it is bad for security, but plugins may load more quickly.
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
