Show last activity column on queue toadlet

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1239,6 +1239,9 @@ QueueToadlet.insertFileBrowseLabel=Upload a file from disk
 QueueToadlet.insertFileBrowseButton=Browse files
 QueueToadlet.insertFileResetForm=Reset Form
 QueueToadlet.key=Key
+QueueToadlet.lastActivity=Last Activity
+QueueToadlet.lastActivity.unknown=unknown
+QueueToadlet.lastActivity.ago=${time} ago
 QueueToadlet.legend=Legend
 QueueToadlet.mimeType=MIME Type
 QueueToadlet.noTaskOnGlobalQueue=There is no task queued on the global queue at the moment.
