Add German translation for last activity column in queue toadlet.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1165,6 +1165,9 @@ QueueToadlet.insertFileInsertFileLabel=Datei einfügen
 QueueToadlet.insertFileLabel=Lokale Datei über den Browser hochladen (LANGSAM)
 QueueToadlet.insertFileResetForm=Formular zurücksetzen
 QueueToadlet.key=Schlüssel
+QueueToadlet.lastActivity=Letzte Aktivität
+QueueToadlet.lastActivity.unknown=unbekannt
+QueueToadlet.lastActivity.ago=vor ${time}
 QueueToadlet.legend=Legende
 QueueToadlet.mimeType=MIME-Typ
 QueueToadlet.noTaskOnGlobalQueue=Im Moment ist keine Aufgabe in der globalen Warteschlange.
