Use a progressbar to show connected peers/friends.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1565,6 +1565,7 @@ StatisticsToadlet.waiting=Waiting
 StatisticsToadlet.writeRate=Write Rate
 StatisticsToadlet.writes=Writes
 StatusBar.alerts=Messages:
+StatusBar.connectedPeers=We are currently connected to ${X} friends and ${Y} strangers.
 StatusBar.switchToAdvancedMode=Switch to advanced mode
 StatusBar.switchToSimpleMode=Switch to simple mode
 SymlinkerToadlet.symlinks=Symlinks in ToadletServer
