--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -704,6 +704,7 @@ KnownUnsafeContentTypeException.title=Bekannter gefährlicher Typ: ${type}
 LocalFileInsertToadlet.checkPathExist=Stellen Sie sicher, dass der angegebene Pfad existiert.
 LocalFileInsertToadlet.checkPathIsDir=Stellen Sie sicher, dass der angegebene Pfad ein Verzeichnis ist.
 LocalFileInsertToadlet.checkPathReadable=Stellen Sie sicher, dass auf den angegebenen Pfad, von dem Benutzer der den Knoten ausführt, zugegriffen werden kann.
+LocalFileInsertToadlet.compress=Komprimieren
 LocalFileInsertToadlet.dirAccessDenied=Sie können dieses Verzeichnis nicht durchsuchen
 LocalFileInsertToadlet.dirCannotBeRead=Das Verzeichnis "${path}" kann nicht gelesen werden.
 LocalFileInsertToadlet.fileHeader=Datei
