Fix bug #3660: Config page still labels salt-hash as experimental.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -898,7 +898,7 @@ Node.storeSaltHashMigrated=Datastore migration finished! You may now delete the 
 Node.storeSize=Store size in bytes
 Node.storeSizeLong=Store size in bytes
 Node.storeType=Store type (LEAVE THIS ALONE)
-Node.storeTypeLong=Datastore type. Currently this can be salt-hash (EXPERIMENTAL, use a salted on-disk hashtable with bloom filter), bdb-index (STABLE, use a BerkeleyDBFreenetStore to store the index, and keep the data in files on disk), or ram (FOR TESTING ONLY, keep the index and the data in RAM). Only use ram if you know what you are doing and have enough RAM to store all your data (and note it will not be saved on shutdown)! Changes will not take effect until Freenet has been restarted.
+Node.storeTypeLong=Datastore type. Currently this can be salt-hash (this is the default, stores data on disk with a lossy hashtable and a Bloom filter), bdb-index (old store format, not recommended), or ram (FOR TESTING ONLY, keep the index and the data in memory, not on disk). Only use ram if you know what you are doing and have enough RAM to store all your data (and note it will not be saved on shutdown)! Changes will not take effect until Freenet has been restarted.
 Node.storeBloomFilterSize=Bloom filter size (total) in bytes
 Node.storeBloomFilterSizeLong=Bloom filter size (total) in bytes. Usually 1/2048th the size of data store is more than enough. Set this to zero to disable bloom filter. Set this to -1 to reset to default.
 Node.storeBloomFilterCounting=Use counting bloom filter?
