French translation for 1240.

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -748,6 +748,7 @@ KnownUnsafeContentTypeException.title=Type connu comme dangereux : ${type}
 LocalFileInsertToadlet.checkPathExist=Veuillez vérifier que le chemin indiqué existe.
 LocalFileInsertToadlet.checkPathIsDir=Veuillez vérifier que le chemin indiqué est un dossier.
 LocalFileInsertToadlet.checkPathReadable=Assurez-vous que le chemin spécifié soit lisible par le noeud.
+LocalFileInsertToadlet.compress=Compresser
 LocalFileInsertToadlet.dirAccessDenied=Vous ne pouvez pas parcourir ce dossier
 LocalFileInsertToadlet.dirCannotBeRead=Impossible de lire le dossier "${path}".
 LocalFileInsertToadlet.fileHeader=Fichier
@@ -1089,6 +1090,11 @@ PluginConfig.configFile=Fichier de configuration des plugins
 PluginConfig.configFileLong=Chemin du fichier de configuration des plugins
 PluginConfig.installDir=Dossier d'installation des plugins
 PluginConfig.installDirLong=Dossier d'installation des plugins
+PluginJarUpdater.pluginUpdatedShortText=Une nouvelle version du plugin ${name} est disponible !
+PluginJarUpdater.pluginUpdatedText=Cliquez ci-dessous pour mettre à jour à la dernière version (${newVersion}) de ${name}.
+PluginJarUpdater.pluginUpdatedTitle=Une nouvelle version du plugin ${name} est disponible !
+PluginJarUpdater.updatePlugin=Mise à jour du plugin après vérification finale de la sécurité
+PluginJarUpdater.willDeployAfterRevocationCheck=Le plugin ${name} sera installé dès que nous aurons terminé la vérification que le système de mise à jour automatique n'a pas été compromis.
 PluginManager.alwaysLoadPluginsFromCentralServer=Toujours charger les plugins depuis le web ?
 PluginManager.alwaysLoadPluginsFromCentralServerLong=Si activé, nous chargerons toujours les plugins via le web, et nous n'essayerons pas de les charger via Freenet. Cela implique de contacter un serveur central via le web (en utilisant HTTPS), donc c'est mauvais pour la sécurité, mais les plugins peuvent se charger plus rapidement.
 PluginManager.cannotSetOnceLoaded=Impossible de définir la liste des plugins une fois démarré
@@ -1148,9 +1154,12 @@ PproxyToadlet.loadPluginLabel=Charger Plugin :
 PproxyToadlet.noPlugins=Aucun plugin chargé
 PproxyToadlet.noVersion=N/A
 PproxyToadlet.pluginDirectoryNotCreated=Le dossier "plugins" n'a pas pu être créé.
+PproxyToadlet.pluginFilename=Nom
 PproxyToadlet.pluginNotDownloaded=Le plugin n'a pas pu être téléchargé.
 PproxyToadlet.pluginNotFoundReload=Le plugin demandé est introuvable.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin introuvable (rechargement)
+PproxyToadlet.pluginNotFoundUpdating=Le plugin que vous essayez de mettre à jour n'est pas chargé !
+PproxyToadlet.pluginNotFoundUpdatingTitle=Plugin non trouvé (mise à jour)
 PproxyToadlet.pluginSourceChoice=Vous pouvez soit charger le plugin depuis Freenet, ou depuis nos serveurs centraux :
 PproxyToadlet.pluginSourceFreenet=Chargement depuis Freenet. Ceci est intraçable, sécurisé, et peut-être lent.
 PproxyToadlet.pluginSourceHTTPS=Chargement via le web depuis nos serveurs centraux.
@@ -1257,6 +1266,7 @@ QueueToadlet.insertFileInsertFileLabel=Insérer le fichier
 QueueToadlet.insertFileLabel=Ou envoyer un fichier à partir du navigateur (LENT)
 QueueToadlet.insertFileResetForm=Remettre à zéro
 QueueToadlet.key=Clé
+QueueToadlet.lastActivity=Dernière activité
 QueueToadlet.legend=Légende
 QueueToadlet.mimeType=Type MIME
 QueueToadlet.noTaskOnGlobalQueue=Il n'y a aucune tâche en attente dans la file d'attente globale.
@@ -1320,6 +1330,8 @@ QueueToadlet.warningUnsafeContentExplanation=Ce fichier n'est pas filtré par vo
 QueueToadlet.wipD=En cours : Téléchargements (${size})
 QueueToadlet.wipDU=En cours : Insertions de dossiers (${size})
 QueueToadlet.wipU=En cours : Insertions (${size})
+QueueToadlet.lastActivity.ago=Il y a ${time}
+QueueToadlet.lastActivity.unknown=Inconnue
 RequestStarterGroup.scheduler=Priorités de l'ordonnanceur : hard (respect strict des priorités) ou soft (mélange légèrement les priorités)
 RequestStarterGroup.schedulerCHKInserts=Gestion des priorités par l'ordonnanceur (insertions de CHK)
 RequestStarterGroup.schedulerCHKRequests=Gestion des priorités par l'ordonnanceur (requètes de CHK)
@@ -1580,6 +1592,7 @@ StatisticsToadlet.waiting=En attente
 StatisticsToadlet.writeRate=Taux d'écriture
 StatisticsToadlet.writes=Ecritures
 StatusBar.alerts=Messages :
+StatusBar.connectedPeers=Nœud actuellement connecté à ${X} ami(s) et ${Y} inconnus.
 StatusBar.switchToAdvancedMode=Passer au mode avancé
 StatusBar.switchToSimpleMode=Passer au mode simple
 SymlinkerToadlet.symlinks=Liens symboliques
@@ -1650,7 +1663,9 @@ TranslationToadlet.remove=Supprimer
 TranslationToadlet.removeOverrideTitle=Supprimer une clé de traduction
 TranslationToadlet.removeOverrideWarningTitle=Vous êtes sur le point de supprimer une clé de traduction !
 TranslationToadlet.returnToTranslations=Revenir à la page de traduction
+TranslationToadlet.selectTranslation=Sélection de la traduction
 TranslationToadlet.showEverything=Tout montrer, même les chaînes déjà traduites
+TranslationToadlet.showTranslationOf=Montrer la traduction de :
 TranslationToadlet.title=Traduction
 TranslationToadlet.titleLong=Contribuer à la traduction
 TranslationToadlet.translationKeyLabel=Clé de traduction
