Get rid of insert coalescing. It has the same severe problems (loops) as request coalescing, and anyway we don't want to coalesce inserts and thus reduce their possible paths. Also get rid of KeyHTLPair and everything related to it, was used mainly for coalescing although also for stats. This does remove some stats, and affects 2 strings on the stats page.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1489,8 +1489,8 @@ StaticToadlet.pathNotFound=The path you specified doesn't exist.
 StaticToadlet.pathNotFoundTitle=Path Not Found
 StatisticsToadlet.accessRate=Access Rate
 StatisticsToadlet.ackOnlyBytes=Ack-only packets: ${total}
-StatisticsToadlet.activityInserts=Inserts: ${totalSenders} total senders, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
-StatisticsToadlet.activityRequests=Requests: ${totalSenders} total senders, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
+StatisticsToadlet.activityInserts=Inserts: ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
+StatisticsToadlet.activityRequests=Requests: ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
 StatisticsToadlet.adminBytes=Admin bytes: ${initial} initial messages, ${changedIP} IP change messages, ${disconn} disconnection notifications, ${routingStatus} routing status
 StatisticsToadlet.allocMemory=Allocated Java memory: ${memory}
 StatisticsToadlet.announceBytes=Announcement output: ${total}
