Added an option to enable/disable web pushing.
Also added support to the new option for the image loading

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1449,6 +1449,8 @@ SimpleToadletServer.enableActivelinks=Enable activelinks?
 SimpleToadletServer.enableActivelinksLong=Should the Browse Freenet page show icons for each bookmarked page? The page will load faster if it doesn't show the icons...
 SimpleToadletServer.enableJS=Enable FProxy use of Javascript?
 SimpleToadletServer.enableJSLong=Whether or not FProxy should use Javascript "helpers". This setting should be turned to false in most cases. Note that freesites may not use javascript even if this is enabled.
+SimpleToadletServer.enableWP=Enable FProxy use of web pushing (experimental)?
+SimpleToadletServer.enableWPLong=Whether or not FProxy should use javascript web pushing to update displayed data without reloading. It requires that javascript is turned on. It is experimental and use at your own risk. 
 SimpleToadletServer.enabled=Enable FProxy?
 SimpleToadletServer.enabledLong=Whether to enable FProxy and related HTTP services
 SimpleToadletServer.enableExtendedMethodHandling=Enable extended HTTP method handling?
