Change Fetch button visibility with sec levels.  HTML generation cleanup on download / fetch buttons.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -446,10 +446,11 @@ FProxyToadlet.dangerousContentTitle=Potentially Dangerous Content
 FProxyToadlet.dangerousRSS=Freenet has detected that the file you are trying to fetch might be RSS. RSS cannot be properly filtered by Freenet, and may contain web-bugs (inline images etc which may expose your IP address to a malicious site author and therefore break your anonymity). Firefox 2.0 and Internet Explorer 7.0 will open the file as RSS even though its content type is "${type}".
 FProxyToadlet.dangerousRSSSubtitle=RSS feed may be dangerous
 FProxyToadlet.dangerousRSSTitle=Potentially Dangerous Content (RSS)
-FProxyToadlet.downloadInBackgroundToDisk=Download the file in the background and store in ${dir}. You will be notified when the download completes, and can follow its progress on the ${page}downloads page${/link}.
 FProxyToadlet.downloadInBackgroundToDiskButton=Download
+FProxyToadlet.downloadInBackgroundToDisk=Download the file in the background and store in ${dir}. You will be notified when the download completes, and can follow its progress on the ${page}downloads page${/link}.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Fetch
-FProxyToadlet.downloadInBackgroundToTempSpace=Fetch the file in the background. It will be accessible through the ${page}downloads page${/link}, and will be lost if you uninstall Freenet, click the panic button, or lose the master password. You will be notified when the fetch completes.
+FProxyToadlet.downloadInBackgroundToTempSpace=Fetch the file in the background. It will be accessible <strong>only</strong> through the ${page}downloads page${/link}, and will be lost if you uninstall Freenet, click the panic button, or lose the master password. You will be notified when the fetch completes.
+FProxyToadlet.downloadToDiskSecurityWarning=${bold}Warning${/bold}: this will store the file unencrypted on your hard disk, and may present a security risk if you are not using full-disk encryption.
 FProxyToadlet.downloadsTitle=Downloads
 FProxyToadlet.downloads=Files being downloaded from Freenet
 FProxyToadlet.errorIsFatal= This is a fatal error. It is unlikely that retrying will solve the problem.
