Report payload bytes within announcement bytes.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1494,7 +1494,7 @@ StatisticsToadlet.activityInserts=Inserts: ${CHKhandlers} CHK handlers, ${SSKhan
 StatisticsToadlet.activityRequests=Requests: ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
 StatisticsToadlet.adminBytes=Admin bytes: ${initial} initial messages, ${changedIP} IP change messages, ${disconn} disconnection notifications, ${routingStatus} routing status
 StatisticsToadlet.allocMemory=Allocated Java memory: ${memory}
-StatisticsToadlet.announceBytes=Announcement output: ${total}
+StatisticsToadlet.announceBytes=Announcement output: ${total} (transferring node refs payload ${payload})
 StatisticsToadlet.authBytes=Connection setup: ${total} output
 StatisticsToadlet.avgDist=Avg. Distance
 StatisticsToadlet.avgLocation=Avg. Location
