--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1529,6 +1529,7 @@ StatisticsToadlet.nodeToNodeBytes=Node to node messages: ${total}
 StatisticsToadlet.noRequests=Your node is not processing any requests right now.
 StatisticsToadlet.offerReplys=Running offer replys: ${chk} CHK, ${ssk} SSK.
 StatisticsToadlet.offeredKeyOutput=Offered keys: sending keys ${total}, sending offers ${offered}
+StatisticsToadlet.opennetStats=Opennet stats
 StatisticsToadlet.osArch=OS Architecture: ${arch}
 StatisticsToadlet.osName=OS Name: ${name}
 StatisticsToadlet.osVersion=OS Version: ${version}
