--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -382,6 +382,7 @@ FProxyToadlet.downloadInBackgroundToDisk=Télécharger en arrière plan et enreg
 FProxyToadlet.downloadInBackgroundToDiskButton=Téléchargement
 FProxyToadlet.downloadInBackgroundToTempSpace=Télécharger le fichier en arrière plan. Il sera accessible par la ${page}page de téléchargements${/link}, et sera perdu si vous désinstallez Freenet, cliquez sur le bouton panique, perdez votre mot de passe maître ou supprimez le fichier de clés maître (master.keys par défaut). Vous serez averti quand le téléchargement sera terminé.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Téléchargement temporaire
+FProxyToadlet.downloadToDiskSecurityWarning=${bold}Attention${/bold} : ceci va enregistrer le fichier en clair sur votre disque dur, et peut-être présenter un risque si vous n'utilisez pas de système de chiffrement complet de disque dur.
 FProxyToadlet.downloads=Les fichiers sont en cours de téléchargement depuis Freenet
 FProxyToadlet.downloadsTitle=Téléchargements
 FProxyToadlet.errorIsFatal=Cette erreur est fatale. Il y a peu de chances pour que le problème se résolve en réessayant.
