Implemnt statistics of average job execution time

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1499,11 +1499,13 @@ StatisticsToadlet.authBytes=Connection setup: ${total} output
 StatisticsToadlet.avgDist=Avg. Distance
 StatisticsToadlet.avgLocation=Avg. Location
 StatisticsToadlet.avgSuccessLoc=Avg. Success Loc.
+StatisticsToadlet.avgTime=Avg. Time
 StatisticsToadlet.bandwidthTitle=Bandwidth
 StatisticsToadlet.capacity=Capacity
 StatisticsToadlet.chkCache=Cache (CHK)
 StatisticsToadlet.chkDetailTiming=Detailed timings (local CHK fetches)
 StatisticsToadlet.chkStore=Store (CHK)
+StatisticsToadlet.count=Count
 StatisticsToadlet.cpus=Available CPUs: ${count}
 StatisticsToadlet.datasize=Data Size
 StatisticsToadlet.datastore=Datastore
@@ -1517,6 +1519,7 @@ StatisticsToadlet.getLogs=Get latest node's logfile
 StatisticsToadlet.globalWindow=Global window
 StatisticsToadlet.inputRate=Input Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
+StatisticsToadlet.jobType=Job Type
 StatisticsToadlet.jvmInfoTitle=JVM Info
 StatisticsToadlet.jvmVendor=JVM Vendor: ${vendor}
 StatisticsToadlet.javaVersion=Java Version: ${version}
