Make requests pausable without adding new priorities
A request on the final priority will be not be passed from
ClientRequestScheduler to RequestSenders

--- a/src/freenet/l10n/freenet.l10n.es.properties
+++ b/src/freenet/l10n/freenet.l10n.es.properties
@@ -884,8 +884,7 @@ QueueToadlet.priority2=alta
 QueueToadlet.priority3=media
 QueueToadlet.priority4=baja
 QueueToadlet.priority5=muy baja
-QueueToadlet.priority6=bajísima
-QueueToadlet.priority7=pausa
+QueueToadlet.priority6=nunca terminará
 QueueToadlet.progress=Progreso
 QueueToadlet.progressbarAccurate=Este indicador de progreso no es preciso
 QueueToadlet.progressbarNotAccurate=Este valor de progreso probablemente cambiará ya que el proceso de descarga del documento no ha terminado
