--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -1735,4 +1735,4 @@ BookmarkEditorToadlet.invalidKeyWithReason=Ongeldige Freenet code.
 ClockProblemDetectedUserAlert.title=De tijd op je computer lijkt niet juist.
 ClockProblemDetectedUserAlert.text=Freenet heeft gedetecteerd dat de tijd van je computer niet juist is. Freenet zal niet goed kunnen functioneren totdat dit opgelost is en Freenet opnieuw is gestart.
 ClockProblemDetectedUserAlert.shortText=De tijd van je computer is onjuist, dus Freenet kan geen verbindingen maken.
-MMaximum memory usage of the database backing the datastore indexes. 0 means no limit (limited to ~ 30% of maximum memory)
+End
