--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1273,7 +1273,7 @@ QueueToadlet.priority2=high
 QueueToadlet.priority3=medium
 QueueToadlet.priority4=low
 QueueToadlet.priority5=very low
-QueueToadlet.priority6=will never finish
+QueueToadlet.priority6=paused
 QueueToadlet.priority=Priority
 QueueToadlet.progress=Progress
 QueueToadlet.progressbarAccurate=This progress value is accurate
