Clarify databaseMaxMemory. It only works for bdbje-index.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -810,8 +810,8 @@ Node.clientCacheTypeLong=If you set this to none there will be less evidence if 
 Node.clientCacheSize=Size of the client cache?
 Node.clientCacheSizeLong=Set the size of the client cache. This is used to cache freesites you visit so that they won't need to be requested next time, and therefore will load faster and won't be visible on the network. If the client cache type is "none", this option is ignored; if it is "ram", this option is the size in RAM of the client cache (part of by the overall maximum memory limit, so increase that if you need to); if it is "salt-hash", this option is the size of the client-cache on disk.
 Node.connectToSeednodesCannotBeChangedMustDisableOpennetOrReboot=Connect to seednodes setting: Cannot disable while opennet is running, either disable and then re-enable opennet or restart Freenet.
-Node.databaseMemory=Datastore maximum memory usage
-Node.databaseMemoryLong=Maximum memory usage of the database backing the datastore indexes. 0 means no limit (limited to ~ 30% of maximum memory)
+Node.databaseMemory=Datastore maximum memory usage (OBSOLETE: bdbje-index only!)
+Node.databaseMemoryLong=Only valid with bdbje-index datastore type. Maximum memory usage of the database backing the datastore indexes, 0 means no limit (limited to ~ 30% of maximum memory)
 Node.deadlockTitle=Deadlocking likely due to buggy JVM/kernel combination
 Node.defragDatabaseOnStartup=Defragment the downloads database during the next startup?
 Node.defragDatabaseOnStartupLong=If true, the database will be defragmented during the next startup (or after the password is entered).
