Implement new statistics: - Queued database job count by job type - Total execution time by job type

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1540,6 +1540,7 @@ StatisticsToadlet.outputRate=Output Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.payloadOutput=Payload Output: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Peer statistics
 StatisticsToadlet.priority=Priority
+StatisticsToadlet.queuedCount=Queued Count
 StatisticsToadlet.readRequests=Read-Requests
 StatisticsToadlet.realGlobalWindow=Real global window
 StatisticsToadlet.requestOutput=Request output (excluding payload): CHK ${chk} SSK ${ssk}.
@@ -1561,6 +1562,7 @@ StatisticsToadlet.totalInputSession=Session Total Input: ${total} (${rate}/s ave
 StatisticsToadlet.totalOutput=Global Total Output: ${total}
 StatisticsToadlet.totalOutputSession=Session Total Output: ${total} (${rate}/s average)
 StatisticsToadlet.totalOverhead=Total non-request overhead: ${rate}/sec (${percent}%).
+StatisticsToadlet.totalTime=Total Time
 StatisticsToadlet.transferringRequests=Transferring Requests: sending ${senders}, receiving ${receivers}, receiving turtles ${turtles}
 StatisticsToadlet.uomBytes=Updater Output: ${total}
 StatisticsToadlet.unaccountedBytes=Other output: ${total} (${percent}%)
