stats table improvement(bug:#0003425)

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1501,10 +1501,12 @@ StatisticsToadlet.avgLocation=Avg. Location
 StatisticsToadlet.avgSuccessLoc=Avg. Success Loc.
 StatisticsToadlet.avgTime=Avg. Time
 StatisticsToadlet.bandwidthTitle=Bandwidth
+StatisticsToadlet.CACHE=Cache
 StatisticsToadlet.capacity=Capacity
+StatisticsToadlet.CHK=CHK
 StatisticsToadlet.chkCache=Cache (CHK)
 StatisticsToadlet.chkDetailTiming=Detailed timings (local CHK fetches)
-StatisticsToadlet.chkStore=Store (CHK)
+StatisticsToadlet.CLIENT=Client cache
 StatisticsToadlet.count=Count
 StatisticsToadlet.cpus=Available CPUs: ${count}
 StatisticsToadlet.datasize=Data Size
@@ -1540,6 +1542,7 @@ StatisticsToadlet.outputRate=Output Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.payloadOutput=Payload Output: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Peer statistics
 StatisticsToadlet.priority=Priority
+StatisticsToadlet.PUB_KEY=Pubkey
 StatisticsToadlet.queuedCount=Queued Count
 StatisticsToadlet.readRequests=Read-Requests
 StatisticsToadlet.realGlobalWindow=Real global window
@@ -1548,11 +1551,14 @@ StatisticsToadlet.resendBytes=Resent bytes: ${total}
 StatisticsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 StatisticsToadlet.routingDisabledShort=Not routing traffic
 StatisticsToadlet.running=Running
+StatisticsToadlet.SLASHDOT=Slashdot cache
 StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
+StatisticsToadlet.SSK=SSK
+StatisticsToadlet.STORE=Store
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
 StatisticsToadlet.successByHTL=Success rates by HTL (remote fetches)
 StatisticsToadlet.successfulReads=Successful Reads
-StatisticsToadlet.successRate=Success rates
+StatisticsToadlet.successRate=Success Rate
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Generate a Thread Dump
 StatisticsToadlet.threads=Running threads: ${running}/${max}
