--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -1530,6 +1530,13 @@ StatisticsToadlet.capacity=Capacité
 StatisticsToadlet.chkCache=Cache (CHK)
 StatisticsToadlet.chkDetailTiming=Temps détaillés (récupérations locales de CHK)
 StatisticsToadlet.chkStore=Store (CHK)
+StatisticsToadlet.STORE=Store
+StatisticsToadlet.CACHE=Cache
+StatisticsToadlet.SLASHDOT=Slashfot
+StatisticsToadlet.CLIENT=Client cache
+StatisticsToadlet.CHK=CHK
+StatisticsToadlet.SSK=SSK
+StatisticsToadlet.PUB_KEY=Pubkey
 StatisticsToadlet.cpus=Processeurs disponibles : ${count}
 StatisticsToadlet.databaseJobsByPriority=Base de données (opérations)
 StatisticsToadlet.datasize=Espace utilisé
