--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -168,6 +168,13 @@ StatisticsToadlet.furthestSuccess=Verste succes
 StatisticsToadlet.activityRequests=Verzoeken: ${totalSenders} totaal verzonden, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} lokaal)
 StatisticsToadlet.versionTitle=Versie-informatie node
 StatisticsToadlet.chkCache=Cache (CHK)
+StatisticsToadlet.STORE=Store
+StatisticsToadlet.CACHE=Cache
+StatisticsToadlet.SLASHDOT=Slashdot
+StatisticsToadlet.CLIENT=Client cache
+StatisticsToadlet.CHK=CHK
+StatisticsToadlet.SSK=SSK
+StatisticsToadlet.PUB_KEY=Pubkey
 StatisticsToadlet.jvmInfoTitle=JVM Info
 StatisticsToadlet.activityInserts=Invoegingen: ${totalSenders} totaal aantal verstuurders, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} lokaal)
 StatisticsToadlet.running=Draait
