--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -157,6 +157,13 @@ StatisticsToadlet.furthestSuccess=Самое дальнее попадание
 StatisticsToadlet.activityRequests=Запросы: ${totalSenders} источников, ${CHKhandlers} владельцев CHK, ${SSKhandlers} владельцев SSK (${local} локальных)
 StatisticsToadlet.versionTitle=Информация о версии узла
 StatisticsToadlet.chkCache=Кэш (CHK)
+StatisticsToadlet.STORE=Хранилище
+StatisticsToadlet.CACHE=Кэш
+StatisticsToadlet.SLASHDOT=Кэш ULPR
+StatisticsToadlet.CLIENT=Клиентский кэш
+StatisticsToadlet.CHK=CHK
+StatisticsToadlet.SSK=SSK
+StatisticsToadlet.PUB_KEY=Pubkey
 StatisticsToadlet.activityInserts=Выгрузки: ${totalSenders} источников, ${CHKhandlers} владельцев CHK, ${SSKhandlers} владельцев SSK (${local} локальных)
 StatisticsToadlet.jvmInfoTitle=Информация о JVM
 StatisticsToadlet.running=Запущено
