add WARNING to config options

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -759,7 +759,7 @@ LogConfigHandler.maxCachedLinesLong=Maximum number of lines of logging cached in
 LogConfigHandler.maxZippedLogsSize=Maximum disk space used by old logs
 LogConfigHandler.maxZippedLogsSizeLong=Maximum disk space used by old logs
 LogConfigHandler.minLoggingPriority=Minimum priority to log messages at
-LogConfigHandler.minLoggingPriorityLong=Minimum priority at which messages are logged. options are debug, minor, normal, error, in order of diminishing verbosity. Generally you only need to change this if something is broken and you need to gather more information for the developers. If you are worried about your computer being seized, set this to ERROR to minimise any possible information leakage.
+LogConfigHandler.minLoggingPriorityLong=Minimum priority at which messages are logged. options are debug, minor, normal, warning, error, in order of diminishing verbosity. Generally you only need to change this if something is broken and you need to gather more information for the developers. If you are worried about your computer being seized, set this to ERROR to minimise any possible information leakage.
 LogConfigHandler.rotationInterval=Log rotation interval
 LogConfigHandler.rotationIntervalLong=Log rotation interval - period after which logs are rotated. We keep the last two log files (current and prev), plus lots of compressed logfiles up to maxZippedLogsSize
 LoggerHook.unrecognizedPriority=Unrecognised priority name: ${name}.
