Fix FNP port number string. It is darknet only!

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -877,8 +877,8 @@ Node.paddDataPackets=Pad data packets sent by this Freenet node with random data
 Node.paddDataPacketsLong=Pad data packets sent by this Freenet node with random-length content? For security, on a single node, turning this off is bad; if a large part of the network starts doing it, we become very vulnerable to a passive attacker. However, it should improve performance, particularly the payload percentage. You have been warned!
 Node.passOpennetPeersThroughDarknet=Relay opennet noderefs through darknet peers?
 Node.passOpennetPeersThroughDarknetLong=If true, opennet noderefs (NEVER our own darknet noderef) will be relayed through our darknet peers. So a node (this node, or its peers) can get opennet peers from its darknet peers. This is useful because it allows us to bootstrap new opennet peers after having lost our peers due to downtime, for example. However, it may make traffic analysis slightly easier, so turn it off if you are paranoid.
-Node.port=FNP port number (UDP)
-Node.portLong=UDP port for node-to-node communications (Freenet Node Protocol)
+Node.port=Darknet port number (UDP)
+Node.portLong=UDP port used by the node to communicate with your Friends' nodes. This must be port forwarded if possible. We use a separate port for opennet i.e. to connections to Strangers.
 Node.publishOurPeersLocation=Shall we send our peers' locations to our peers?
 Node.publishOurPeersLocationLong=Shall we send our peers' locations to our peers? Doing so helps routing but gives some information away to a potential attacker.
 Node.routeAccordingToOurPeersLocation=Shall we use the locations of the peers of our peers into account for routing purposes?
